# matryoshka_tic_tac_toe

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: generator-progress.json  lookup.json
src/: game.rs  io.rs  lib.rs  symmetry.rs
src/game/: main.rs
src/lookup-generator/: main.rs
src/solver/: main.rs  mod.rs
