[package]
name = "matryoshka_tic_tac_toe"
version = "1.0.0"
authors = ["Kurtis Charnock <kurtis@charno.cc>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "game"
path = "src/game/main.rs"

[[bin]]
name = "solver"
path = "src/solver/main.rs"

[[bin]]
name = "lookup-generator"
path = "src/lookup-generator/main.rs"

[dependencies]
rayon = "1.5.1"
smallvec = "1.6.1"
jemallocator-global = "0.3.2"
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_with = "1.9.1"
strum = "0.20.0"
strum_macros = "0.20"
getopts = "0.2.21"
arc-swap = "1.3.0"
